fixes remove button alignment on cart

--- a/local/scss/views/_cart.scss
+++ b/local/scss/views/_cart.scss
@@ -56,6 +56,7 @@
 		}
 		.panel-close{
 			position: relative;
+			top: 0;
 			@media (max-width: $screen-xs-max) {
 			    display: none;
 			}
